crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_type_param_repr.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "type box ('a : 1) = Box"
---
nash::syntax

  × Expected a representation bound.
   ╭─[src/Main.nash:1:16]
 1 │ type box ('a : 1) = Box
   ·                ─
   ╰────
  help: Use `Big`, `Const`, `Term`, `Storable`, or `Little`.
