crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_type_param_space.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "type box ('a\t: Term) = Box"
---
nash::syntax

  × Tabs are not allowed.
   ╭─[src/Main.nash:1:13]
 1 │ type box ('a    : Term) = Box
   ·             ────
   ╰────
  help: Replace the tab with spaces.
