crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_type_param_start.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: type box (1) = Box
---
nash::syntax

  × Expected a type parameter.
   ╭─[src/Main.nash:1:11]
 1 │ type box (1) = Box
   ·           ─
   ╰────
  help: Use a quoted name such as `'a`, or a bounded parameter such as `('a :
        Storable)`.
