crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_type_record.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f : {="
---
nash::syntax

  × Expected a record field.
   ╭─[src/Main.nash:1:6]
 1 │ f : {=
   ·      ─
   ╰────
  help: Write `name : Type`.
