crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_type_space.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "f : \tint"
---
nash::syntax

  × Tabs are not allowed.
   ╭─[src/Main.nash:1:5]
 1 │ f :     int
   ·     ────
   ╰────
  help: Replace the tab with spaces.
