crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_type_var_start.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
MISSING TYPE VARIABLE

  × I just saw a quote marking a type variable, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Type variables have a quote followed by a lower-case name, such as 'a or
        'result.
